# agfs

./: README.md
agfs-fuse/: README.md  go.mod  go.sum
agfs-fuse/cmd/agfs-fuse/: main.go
agfs-fuse/pkg/fusefs/: fs.go  handles.go  handles_test.go  node.go
agfs-sdk/go/: README.md  client.go  client_test.go  go.mod  types.go
agfs-sdk/python/pyagfs/: client.py
agfs-server/: Dockerfile  api.md  go.mod
agfs-server/cmd/server/: main.go
agfs-server/examples/hackernewsfs-wasm/: Cargo.toml
agfs-server/examples/hackernewsfs-wasm/src/: lib.rs
agfs-server/pkg/filesystem/: filesystem.go
agfs-server/pkg/handlers/: handlers.go
agfs-server/pkg/mountablefs/: mountablefs.go  mountablefs_test.go
agfs-shell/: .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  FSGREP_USAGE.md  README.md  pyproject.toml
agfs-shell/agfs_shell/: __init__.py  alias_registry.py  ast_nodes.py  builtins.py  builtins.py.backup  cli.py  command_decorators.py  completer.py  context.py  exceptions.py  executor.py  filesystem.py  filesystem_interface.py  function_registry.py  lexer.py  parser.py  path_manager.py  pipeline.py  process.py  shell.py  streams.py  variable_manager.py  webapp_server.py
agfs-shell/scripts/: quality-check.sh
agfs-shell/tests/: conftest.py  test_alias_registry.py  test_builtins.py  test_command_context.py  test_control_parser.py  test_expression.py  test_function_registry.py  test_integration_functions.py  test_lexer.py  test_path_manager.py  test_pipeline.py  test_process.py  test_shell_core.py  test_variable_manager.py
(+70 files in other folders)
