[package]
name = "hackernewsfs-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
agfs-wasm-ffi = { path = "../agfs-wasm-ffi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indoc = "2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
